fix spring devtools compatible issue