@@ -24,7 +24,6 @@ import java.util.UUID;
  * Service implementation for photo operations including upload, retrieval, and deletion
  */
 @Service
-@Transactional
 public class PhotoServiceImpl implements PhotoService {
 
     private static final Logger logger = LoggerFactory.getLogger(PhotoServiceImpl.class);
@@ -74,6 +73,7 @@ public class PhotoServiceImpl implements PhotoService {
      * Upload a photo file
      */
     @Override
+    @Transactional
     public UploadResult uploadPhoto(MultipartFile file) {
         UploadResult result = new UploadResult();
         result.setFileName(file.getOriginalFilename());
@@ -91,7 +91,7 @@ public class PhotoServiceImpl implements PhotoService {
             // Validate file size
             if (file.getSize() > maxFileSizeBytes) {
                 result.setSuccess(false);
-                result.setErrorMessage("File size exceeds %dMB limit.".formatted(maxFileSizeBytes / 1024 / 1024));
+                result.setErrorMessage(String.format("File size exceeds %dMB limit.", maxFileSizeBytes / 1024 / 1024));
                 logger.warn("Upload rejected: File size {} exceeds limit for {}", 
                     file.getSize(), file.getOriginalFilename());
                 return result;
